--- a/index.html
+++ b/index.html
@@ -39,7 +39,16 @@
                 <button onclick="isPrime()">Check</button>
                 <label id="primeCheckResult"></label>  
             </section>           
-        </div>       
+        </div>  
+        <div class="column">
+            <section>
+                <h2>Ceasar Cipher</h2>                
+                <label>Number to test:</label>
+                <input id="textToCipher"/>
+                <button onclick="isPrime()">Check</button>
+                <label id="cipher"></label>  
+            </section>           
+        </div>     
      </div>
     
    
@@ -49,7 +58,7 @@
             const operand2Input = document.getElementById("operand2");
             let n = operand1Input.value;
             let m = operand2Input.value;
-            const response = await fetch("https://arithmetic-service.onrender.com/add/" + n + "/" + m);
+            const response = await fetch("https://arithmetic-service-wjduncan.onrender.com/add/" + n + "/" + m);
             const sum = await response.json();
             document.getElementById("sum").innerText = sum;
         }
@@ -57,9 +66,16 @@
         async function isPrime() {
             const numberToTest = document.getElementById("numberToTest");            
             let n = numberToTest.value;            
-            const response = await fetch("???" + n);
+            const response = await fetch("https://primes-service-wjduncan.onrender.com/" + n);
             const result = await response.json();
             document.getElementById("primeCheckResult").innerText = result;
+        }
+        async function cipher(){
+            const numberToTest = document.getElementById("textToCipher");
+            let plainText = numberToTest.value;
+            const response = await fetch("https://cipher-service-wjduncan.onrender.com" + plaintext)
+            const result = await response.json();
+            document.getElementById("cipher").innerText = result;
         }
     </script>
 </body>
