--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
         </div>  
         <div class="column">
             <section>
-                <h2>Ceasar Cipher</h2>                
-                <label>Number to test:</label>
+                <h2>Caesar Cipher</h2>                
+                <label>word to change:</label>
                 <input id="textToCipher"/>
-                <button onclick="isPrime()">Check</button>
+                <button onclick="">cipher()</button>
                 <label id="cipher"></label>  
             </section>           
         </div>     
