--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 <h2>Caesar Cipher</h2>                
                 <label>word to change:</label>
                 <input id="textToCipher"/>
-                <button onclick="">cipher()</button>
+                <button onclick="cipher()">change</button>
                 <label id="cipher"></label>  
             </section>           
         </div>     
