--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <input id="operand1"/> 
             <label>+</label>
             <input id="operand2"/>
-            <button onclick="add()">=</button>
+            <button onclick=add()>=</button>
             <label id="sum"></label>  
         </section>
         </div>
@@ -36,7 +36,7 @@
                 <h2>Prime check</h2>                
                 <label>Number to test:</label>
                 <input id="numberToTest"/>
-                <button onclick="isPrime()">Check</button>
+                <button onclick=isPrime()>Check</button>
                 <label id="primeCheckResult"></label>  
             </section>           
         </div>  
@@ -45,8 +45,8 @@
                 <h2>Caesar Cipher</h2>                
                 <label>word to change:</label>
                 <input id="textToCipher"/>
-                <button onclick="cipher()">change</button>
-                <label id="cipher"></label>  
+                <button onclick=cipher()>change</button>
+                <label id="cipher"></label>
             </section>           
         </div>     
      </div>
